--- a/Notalia/App.xaml
+++ b/Notalia/App.xaml
@@ -9,6 +9,9 @@
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+			<Color x:Key="Background">#DFD7CC</Color>
+			
         </ResourceDictionary>
     </Application.Resources>
 </Application>
