--- a/Notalia/MainPage.xaml
+++ b/Notalia/MainPage.xaml
@@ -1,36 +1,32 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Notalia.MainPage">
+             x:Class="Notalia.MainPage"
+			 BackgroundColor="{StaticResource Background}">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
+	<ScrollView>
+		<AbsoluteLayout
+            Padding="0"
+            Margin="0">
+			<Image
+                Source="loveup.png"
+                AbsoluteLayout.LayoutBounds="70, 0, AutoSize, AutoSize"
+                />
+			<Image
+                Source="lovedown.png"
+                AbsoluteLayout.LayoutBounds="-15, 350, AutoSize, AutoSize"
+                />
+			<Image
+                Source="cdscrap.png"
                 Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
-
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-        </VerticalStackLayout>
-    </ScrollView>
+                AbsoluteLayout.LayoutBounds="225, 350, AutoSize, AutoSize"
+                />
+			<Image
+                Source="notalia.png"
+                Aspect="AspectFit"
+                AbsoluteLayout.LayoutBounds="40, 330, AutoSize, AutoSize"
+                />
+		</AbsoluteLayout>
+	</ScrollView>
 
 </ContentPage>
